# biizi

./: Cargo.toml  diesel.toml  dockerfile
.idx/: dev.nix
migrations/2024-12-16-191427_create_init_models/: up.sql
migrations/2024-12-18-130803_create_tables/: down.sql  up.sql
migrations/2024-12-18-201638_create_user/: up.sql
migrations/2024-12-20-211812_add_user_id_to_job_opportunities/: down.sql  up.sql
src/: main.rs  schema.rs
src/application/: service.rs
src/domain/: enums.rs  models.rs
src/infrastructure/: auth.rs  repositories.rs  schema.rs
src/websocket/: websocket.rs
