[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
axum = { version = "0.7.5", features = ["ws"] }
axum-server = "0.7.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra  = { version = "^0.9.6", features = ["typed-header"] }
uuid = { version = "^1", features = ["v4"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tokio-tungstenite = "0.24.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
diesel =  { version = "2.2.6", features =[ "postgres_backend"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
bb8 = "0.8"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
bcrypt = "0.16.0"
serde_json = "1.0.95"
